--- a/package.json
+++ b/package.json
@@ -1,10 +1,11 @@
 {
   "name": "watermarkit",
-  "version": "0.1.0",
+  "version": "0.1.1",
   "description": "add watermark on an image",
-  "main": "index.js",
+  "main": "dist/watermarkit.js",
   "scripts": {
     "build": "webpack",
+    "prepublish": "npm run build",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
